- Fixed an unsuccessful write to `gamsconfig.yaml`, e.g. when the permissions are not set properly.
- Improved clipboard magic to install a GAMS license via the license dialog. Before, random text has been handled as a GAMS license, which produced unexpected error messages.
- Removed clipboard magic on Studio startup.

Version 1.22.4
==================
- Fixed incomplete list of files to search in, e.g. when search in `This Project` was selected.
- Fixed shortcuts `F11` and `Shift-F11`, i.e. they shouldn't be available when the related buttons are disabled.
- Fixed empty entries in the Project Explorer when the base directory has been changed.
- Fixed when the working or base directory doesn't exist, the project options should show the path in red.

Version 1.22.3
==================
- Fixed search result duplicates when using search in `All Files`, `This Project` or `Open Tabs`.
- Fixed 'Run with debugger' behaves like 'Step start with debugger'.
- Fixed behavior of "Save as ..." for project files (*.gsp).
- Fixed unintended change of main file on project open.
- Fixed Studio can't find GAMS when starting MIRO.
- Fixed 'Close except visible' tabs, before the tab which shall stay open has been closed.
- Fixed crash of the GDX Viewer, when GDXDIFF has been used multiple times in a row.
- Improved Studio behavior when files are missing after a GAMS run error.
- Improved log messages when interrupting a GAMS process.
- Upgraded to Qt 6.9.3.

Version 1.22.2
==================
- Fixed incorrect ESC key behavior in Parameter File Editor, Solver Option Editor, and GAMS User Configuration Editor.
- Fixed S&R dialog wildcard include and exclude file filters, before they did not match all expected files.
- Fixed that changes to command line parameters were lost when changing the main file.
- Fixed that Studio can't start more than 11 GAMS jobs in parallel.
- Fixed update modification state when the 'Dynamic main file' setting has changed.